--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,15 @@ serde_json = "1"
 # Patterns
 regex = "1"
 
+# Rules
+toml = "0.8"
+
 [dev-dependencies]
 proptest = "1"  # Property-based/fuzz testing
+
+[build-dependencies]
+serde = { version = "1", features = ["derive"] }
+toml = "0.8"
 
 [profile.release]
 lto = true
