feat(acceptEdits): make file-editing detection declarative via TOML
Security fixes:
- Check settings.json deny rules BEFORE acceptEdits override to prevent
  bypass of user's explicit deny rules
- Add symlink resolution using fs::canonicalize() to prevent path escape
  attacks (e.g., project/escape -> /etc allowing /etc/passwd modification)
- Refine sensitive path check: allow regular dotfiles (~/.bashrc,
  ~/.prettierrc, ~/.config/*) while blocking security-critical paths
  (~/.ssh, ~/.gnupg, ~/.aws/credentials)

Declarative TOML refactoring:
- Add accept_edits_auto_allow attribute to TOML ask rules for file-editing
  detection, replacing 180 lines of hardcoded Rust with TOML annotations
- Add action_prefix field for AWS-style commands (aws <service> <action>),
  replacing hardcoded prefix arrays with declarative rules
- Generate FILE_EDITING_PROGRAMS and is_file_editing_command() from TOML
- Update system.rs to use declarative functions instead of hardcoded match

Bug fixes:
- Resolve relative paths (./foo, ../bar) in additionalDirectories against cwd
- Extract duplicate acceptEdits logic into should_auto_allow_in_accept_edits()
- Add --fix and --fix-unsafe to biome TOML rules

New tool coverage (23 formatters):
- rustfmt, stylua, clang-format, autopep8, goimports, shfmt, scalafmt,
  ktlint, swiftformat, elm-format, dartfmt, mix format, perltidy,
  rubocop, standardrb, stylelint, comby, grit, semgrep, sad,
  patch, dos2unix, unix2dos, buf format

Documentation:
- Update CLAUDE.md order of operations to match actual code flow
- Add [[custom_handlers]] documentation across all TOML files

--- a/rules/basics.toml
+++ b/rules/basics.toml
@@ -211,4 +211,20 @@ priority = 100
 [[custom_handlers]]
 program = "xargs"
 handler = "check_xargs"
-description = "Allow xargs only when target command is in safe_commands list"
+description = "Allow xargs only when target command is in safe_commands list, also handles xargs sh -c 'script'"
+
+# bash/sh/zsh -c 'script' needs custom handling to parse and check the inner script
+[[custom_handlers]]
+program = "bash"
+handler = "check_shell_c"
+description = "Parse bash -c 'script' and check each command in script is safe"
+
+[[custom_handlers]]
+program = "sh"
+handler = "check_shell_c"
+description = "Parse sh -c 'script' and check each command in script is safe"
+
+[[custom_handlers]]
+program = "zsh"
+handler = "check_shell_c"
+description = "Parse zsh -c 'script' and check each command in script is safe"
