--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ toml = "0.9"
 
 [dev-dependencies]
 proptest = "1"  # Property-based/fuzz testing
+tempfile = "3"  # Temporary directories for settings.json tests
 
 [build-dependencies]
 serde = { version = "1", features = ["derive"] }
